# ParallelBrot

./: CMakeLists.txt  main.cpp  mp4.sh  opencl-main.cpp  opengl-main.cpp  simplebrot.cl
